@@ -1,5 +1,9 @@
 Thu Jul 06 14:46:00 BST 2000 Olly Betts
 
+	* omega: more work on macro language
+
+Thu Jul 06 14:46:00 BST 2000 Olly Betts
+
 	* omega: fixed up problems with lex stuff
 
 Thu Jul 06 12:17:00 BST 2000 Olly Betts
